--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "@fabric/http": "FabricLabs/fabric-http#feature/v0.1.0-RC1",
     "graphql": "16.3.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "socket.io-client": "4.7.4"
   },
   "devDependencies": {
     "mocha": "10.2.0"
